Fixed SAM-184 ´Importer deletes empty row/tab from step 2 to 1´, also fixed a UI issue where not all data would be visible.

--- a/web-app/css/importer.css
+++ b/web-app/css/importer.css
@@ -78,3 +78,8 @@
 .extraFieldInfo {
     display: none;
 }
+
+div.tableEditor {
+    overflow: visible;
+    overflow-x: auto;
+}
